Fixed the wrapping of the speakers

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1262,6 +1262,13 @@ border-top-color:#fff ;
 
 	}
 	
+	.current-speakers a.current-speaker:nth-of-type(18) {
+		@media (min-width: 960px) {
+			margin-right:0;
+		}
+
+	}
+	
 	.current-speakers a.current-speaker .speaker .speaker-top {
 		@include clearfix;
 	}
